# Got

./: .gitignore  .gotignore  API.cpp  API.h  CMakeLists.txt  CommandParser.cpp  CommandParser.h  Huffman.cpp  README.md  got  json.hpp  main.cpp  pending2commit.txt
client/: CommandParser.cpp
include/: CommandParser.h  CommandParser.hpp
server/: package-lock.json  package.json  tsconfig.json  tsoa.json
server/prisma/: schema.prisma
server/prisma/migrations/20221129225900_/: migration.sql
server/prisma/migrations/20221129230201_migration2/: migration.sql
server/prisma/migrations/20221129231611_migration3/: migration.sql
server/public/: swagger.json
server/src/: app.ts
server/src/controllers/: pingController.ts  repositoryController.ts
server/src/routes/: routes.ts
src/: API.cpp  CommandParser.cpp  app.js  package.json
src/prisma/: schema.prisma
src/prisma/migrations/20221128065730_init/: migration.sql
src/routes/: index.js  users.js
src/server/: app.js  package.json
src/server/prisma/: schema.prisma
src/server/public/: script.js
src/server/routes/: index.js
